--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div><button>Sign up</button></div>
                         
                 </div>
-            <div><img src="#" height="200px" width="400px"></div>
+            <div><img src="#" height="280px" width="560px"></div>
             </div>
 
             <div class="info">
@@ -42,19 +42,38 @@
                     Some Random Information
                 </div>
 
-                <div class="boxes">
+                <div class="body-info">
+                    <div class="boxplustext">
                         <div class="box"></div>
+                        <div class="boxsubtext">
+                            <text> this is some subtext under an illustration or image</text>
+                        </div>
+                    </div>
+
+                    <div class="boxplustext">
                         <div class="box"></div>
+                        <div class="boxsubtext">
+                            <text> this is some subtext under an illustration or image</text>
+                        </div>
+                    </div>
+
+                    <div class="boxplustext">
                         <div class="box"></div>
+                        <div class="boxsubtext">
+                            <text> this is some subtext under an illustration or image</text>
+                        </div>
+                    </div>
+
+                    <div class="boxplustext">
                         <div class="box"></div>
+                        <div class="boxsubtext">
+                            <text> this is some subtext under an illustration or image</text>
+                        </div>
+                    </div>
+
                 </div>
 
-                <div class="info-subtext">
-                    <p>this is some subtext under an illustration or image</p>
-                    <p>this is some subtext under an illustration or image</p>
-                    <p>this is some subtext under an illustration or image</p>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
+
 
 
         </div>
