--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
 
                 </div>
 
+            <div class="action-section">
+                <div class="action-banner">
+                    <div class="action-text">
+                        <div class="action-heading">
+                            Call to action! It's time!
+                        </div>
+                        <p class="action-subtext">
+                            Sign up for our product by clicking that button right over there!
+                        </p>
+                    </div>
+                    <div class="action-button"><button>Sign Up</button></div>
+                </div>
+            </div>
+
 
 
 
