Add footer to the landing page
Created a last div to encompass the footer and added a flex display to
justify and align the contents to the center of the container.

--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@
                 </div>
             </div>
 
-
-
-
         </div>
+
+        <div class="footer">
+            <text>Copyright &copy; The Odin Project 2021  </text>
+        </div>
+
+
     
     </body>
 
