Add requirements folder and image div
Added folder that detailed specifications of the project as well as
adjusted the html and css files to add a box where the image would be
and appropriately style it.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
                         <div><button>Sign up</button></div>
                         
                 </div>
-            <div><img src="#" height="280px" width="560px"></div>
-            </div>
+                <div class="image-placeholder">
+                    <text>this is a placeholder for an image.</text>
+                </div>
+                </div>
 
             <div class="info">
 
